dnl Process this file with autoconf to produce a configure script.
AC_INIT(cvsumount/main.c)
AM_INIT_AUTOMAKE(cvsfs, 1.1.4)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mktime strdup strerror strtoul)

AC_OUTPUT(cvsfs/Makefile cvsfsd/Makefile cvsumount/Makefile Makefile cvsmnt/Makefile cvsmount/Makefile include/Makefile tools/Makefile init/Makefile cvsfs.spec)
